tests/error/missing_return_value.gw
#! [contains] missing value for return
fun int test() { return; }
